--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 7
+font pango: monospace 7
+font pango: DejaVu Mono 7
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -27,18 +28,20 @@ font pango:monospace 7
 # font, it doesn’t scale on retina/hidpi displays.
 
 for_window [class="(?i)orage"] floating enable
+for_window [class="xpad"] floating enable
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec terminator
 
 # kill focused window
 bindsym $mod+Shift+a kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run
+bindsym $mod+p exec rofi -show combi
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -118,6 +121,9 @@ bindsym $mod+Shift+underscore move container to workspace 8
 bindsym $mod+Shift+ccedilla move container to workspace 9
 bindsym $mod+Shift+agrave move container to workspace 10
 
+bindsym $alt+Ctrl+Left workspace prev
+bindsym $alt+Ctrl+Right workspace next
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -154,15 +160,26 @@ bindsym $mod+r mode "resize"
 bindsym XF86MonBrightnessUp exec "~/Scripts/brightness.php up"
 bindsym XF86MonBrightnessDown exec "~/Scripts/brightness.php down"
 
+bindsym $mod+a exec "~/dotfiles/reminder.sh"
+bindsym $mod+t exec "xpad"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-        tray_output primary
-}
+#bar {
+#        status_command i3status
+#        tray_output primary
+#}
+
+
+
+# start background apps
+exec --no-startup-id compton
+exec_always --no-startup-id ~/.screenlayout/default.sh
+
+# start polybar
+exec_always --no-startup-id "killall polybar;~/.config/polybar/launch_polybar.sh"
 
 exec pulseaudio
 exec_always nm-applet
 exec "nitrogen --restore"
-exec volumeicon
-
+exec_always --no-startup-id "killall volumeicon; volumeicon"
