--- a/i3/config
+++ b/i3/config
@@ -162,6 +162,7 @@ bindsym XF86MonBrightnessDown exec "~/Scripts/brightness.php down"
 
 bindsym $mod+a exec "~/dotfiles/reminder.sh"
 bindsym $mod+t exec "xpad"
+bindsym Print exec "gnome-screenshot -i"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -181,5 +182,6 @@ exec_always --no-startup-id "killall polybar;~/.config/polybar/launch_polybar.sh
 
 exec pulseaudio
 exec_always nm-applet
+exec_always blueman-applet
 exec "nitrogen --restore"
 exec_always --no-startup-id "killall volumeicon; volumeicon"
